solución de errores

--- a/templates/error.html
+++ b/templates/error.html
@@ -9,7 +9,7 @@
 <body>
     <div class="error-container">
         <h1>ERROR</h1>
-        <h2>error al procesar los archivos, verifica bien y vuelve a intentarlo</h2>
+        <h2>error al procesar los archivos, vuelve a intentarlo</h2>
         <p>{{ error }}</p>
         <a href="/">volver</a>
     </div>
